syntax = "proto3";

option java_package = "com.d101.data.datastore";
option java_multiple_files = true;

message TokenPreferences {
    string accessToken = 1;
    string refreshToken = 2;
}
