syntax = "proto3";

option java_package = "com.d101.data.datastore";
option java_multiple_files = true;


message UserPreferences {
    bool isSocial = 1;
    string userEmail = 2;
    string userNickname = 3;
    bool isNotificationEnabled = 4;
    string backgroundMusicName = 5;
    bool isBackgroundMusicEnabled = 6;
}
