syntax = "proto3";

option java_package = "com.d101.data.datastore";
option java_multiple_files = true;

message UserStatusPreferences {

    bool userLeafStatus = 1;
    bool userFruitStatus = 2;
    string treeName = 3;
}
